7.0.0 Refactoring
Major refactoring. 6.0.0 never made it to github because it was bad. Very bad.
-Now uses a modular system in preparation for further additions related to drafting.
-CosmeticManager is a new work-in-progress module to automate cosmetic choices such as emotes, ward skins and little legends.
-Trader Assistant is now it's own standalone module that can work without rune book.